Started to add links to my training projects

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
   <h1>Sergei Nizhivenko</h1>
+  <ul>
+    <li><a href="/tut-js-bouncing-balls/">Bouncing balls (2D canvas)</a></li>
+    <li><a href="#">Tetris game</a></li>
+  </ul>
 </body>
 </html>
